--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1,1 +1,55 @@
-<p>Hello home page</p>
+<div>
+    <div>
+        <img class="w-full" src="/img/tlo1.jpg" alt="tło">
+        <!-- @TODO alt-->
+    </div>
+</div>
+
+<article class="container-for-article">
+    <header>
+        <h2 class="md:text-4xl text-4xl lg:text-5xl page-title">Dlaczego my?</h2>
+    </header>
+
+    <div class="lg:flex items-center pb-16 justify-center text-justify lg:text-left">
+        <div class="text-lg pb-8 py-4 text-base lg:text-xl">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa
+                dignissimos
+                distinctio dolorem
+                doloremque ducimus illo laboriosam laudantium maxime natus nisi, quaerat quos ratione rerum sapiente sed
+                soluta vel vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cumque
+                dignissimos dolorem ea est
+                fugiat laboriosam nemo, officiis perspiciatis sunt tenetur vel, velit veniam veritatis voluptas! A
+                eligendi fugit natus? Ab aspernatur, aut esse excepturi impedit ipsum iste magni officiis optio porro,
+                quasi voluptatibus.
+                Asperiores commodi consequatur obcaecati, odio quasi vitae. Adipisci architecto autem eaque iste laborum
+                nam nulla unde?</p>
+
+        </div>
+        <img class="rounded-full px-4 py-2 mx-auto" src="/img/zdjęcie1.jpg" alt="">
+    </div>
+</article>
+
+<article class="py-8 bg-sky-300 left-0 right-0 text-white text-base lg:text-xl">
+
+    {{#with shorterFirstNews}}
+    <div class="my-0 mx-auto md:max-w-screen-lg px-8">
+        <h3 class="text-4xl lg:text-5xl text-center font-bold py-8 px-4">Z życia przedszkola</h3>
+        <div class="flex justify-center">
+            <h4 class="font-semibold text-3xl pb-2">{{this.title}}</h4>
+        </div>
+
+        <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span>{{this.article}}{{#if this.isTooLong}}...<a class=" text-xl font-bold hover:font-extrabold uppercase" href="/aktualnosci/{{this.id}}">czytaj dalej</a>{{/if}}</span></div>
+        <div class="flex justify-center text-base font-bold">
+            <a class="hover:font-extrabold uppercase" href="/aktualnosci">Zobacz więcej</a>
+        </div>
+    </div>
+        {{/with}}
+</article>
+
+<article class="container-for-article">
+
+    <div class="pt-4">
+        {{> contact-details}}
+    </div>
+
+</article>
