--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1,16 +1,15 @@
 <!--<div>-->
 <!--    <div>-->
-<!--        <img class="w-full" src="/img/tlo1.jpg" alt="tło">-->
+<!--        <img class="w-full" src="/img/hero.jpg" alt="tło">-->
 <!--        &lt;!&ndash; &ndash;&gt;-->
 <!--    </div>-->
 <!--</div>-->
 
-<div class="hero min-h-screen" style="background-image: url(/img/tlo1.jpg);">
-  <div class="hero-overlay bg-opacity-30"></div>
+<div class="hero min-h-screen" style="background-image: url(/img/hero.jpg);">
+  <div class="hero-overlay bg-opacity-20"></div>
   <div class="hero-content text-center text-white">
     <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-      <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+      <h1 class="mb-5 text-5xl font-bold">ZAPRASZAMY</h1>
     </div>
   </div>
 </div>
@@ -18,8 +17,8 @@
 <!--<article class="container-for-article">-->
 
   <div class="hero min-h-screen bg-base-200">
-    <div class="hero-content flex-col lg:flex-row-reverse">
-      <img src="/img/zdjęcie1.jpg" class="max-w-[20rem] rounded-full shadow-lg" />
+    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+      <img src="/img/home.jpg" alt="zdjęcie promocyjne" class="max-w-[20rem] rounded-full shadow-lg" />
       <div>
         <h1 class="text-5xl font-bold">Dlaczego my?</h1>
         <p class="py-6 pr-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa
@@ -56,7 +55,7 @@
 <!--                nam nulla unde?</p>-->
 
 <!--        </div>-->
-<!--        <img class="rounded-full px-4 py-2 mx-auto" src="/img/zdjęcie1.jpg" alt="">-->
+<!--        <img class="rounded-full px-4 py-2 mx-auto" src="/img/home.jpg" alt="">-->
 <!--    </div>-->
 <!--</article>-->
 
@@ -71,9 +70,9 @@
         <h4 class="font-semibold text-3xl pb-2">{{this.title}}</h4>
       </div>
 
-      <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span><a class=" text-xl font-bold hover:font-extrabold uppercase">czytaj dalej</a></span></div>
+      <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span><a class=" text-xl font-bold hover:text-secondary-focus uppercase">czytaj dalej</a></span></div>
       <div class="flex justify-center text-base font-bold">
-        <a class="hover:font-extrabold uppercase" href="/aktualnosci">Zobacz więcej</a>
+        <a class="hover:text-secondary-focus uppercase" href="/aktualnosci">Przejdź do aktualności</a>
       </div>
     </div>
   </div>
