--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -20,7 +20,7 @@
       </svg>
     </label>
     <ul tabindex="0"
-        class="block menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 absolute h-fit overflow-y-scroll flex-none">
+        class="block menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 absolute h-fit overflow-y-scroll flex-none text-secondary-focus font-semibold">
       <li><a href="/">Strona główna</a></li>
       <li><a href="/aktualnosci">Aktualności</a></li>
       <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>
@@ -43,11 +43,11 @@
 
 
   <div class="flex-1">
-    <a class="btn btn-ghost normal-case text-sm lg:text-xl">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
+    <a class="btn btn-ghost normal-case text-sm lg:text-xl text-primary-focus">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
   </div>
 
 
-  <div class="flex-none gap-2">
+  <div class="flex-none gap-2 text-secondary-focus font-semibold">
     <ul class="menu hidden lg:flex menu-horizontal px-1">
       <li tabindex="0">
         <a>
@@ -81,7 +81,7 @@
       <div class="dropdown dropdown-end">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
           <div class="w-10 rounded-full">
-            <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+            <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" alt="użytkownik" />
           </div>
         </label>
         <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
