--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -1,13 +1,13 @@
 <article class="container-for-article">
 
-    {{#with showingNews}}
+    {{#with news}}
     <h2 class="post-title">{{this.title}}</h2>
 
     <h3 class="text-center pb-10 pt-2">Data: {{this.createdAt}}</h3>
 
-        {{#if ../userLoggedIn}}
+
             {{> edit-post this}}
-        {{/if}}
+
 
     <div class="text-xl whitespace-pre-wrap flex justify-center text-justify">
         <span>{{this.article}}</span>
