--- a/views/news/list-all.hbs
+++ b/views/news/list-all.hbs
@@ -22,7 +22,7 @@
                     <a href="/aktualnosci/{{this.id}}" class="hover:text-pink-400">Czytaj całość</a>
 
 
-                       | <a href="/aktualnosci/{{this.id}}/edit" class="text-pink-400 hover:font-bold">Edytuj wpis</a>
+                       | <a href="/aktualnosci/{{this.id}}/edycja" class="text-pink-400 hover:font-bold">Edytuj wpis</a>
 
 
                 </div>
