--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -9,32 +9,33 @@
   <div class="hero-overlay bg-opacity-20"></div>
   <div class="hero-content text-center text-white">
     <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">ZAPRASZAMY</h1>
+      <h1 class="text-4xl lg:text-5xl font-bold">ZAPRASZAMY</h1>
+      <p class="py-6 text-xl">Lorem ipsum dolor sit amet!</p>
     </div>
   </div>
 </div>
 
 <!--<article class="container-for-article">-->
 
-  <div class="hero min-h-screen bg-base-200">
-    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
-      <img src="/img/home.jpg" alt="zdjęcie promocyjne" class="max-w-[20rem] rounded-full shadow-lg" />
-      <div>
-        <h1 class="text-5xl font-bold">Dlaczego my?</h1>
-        <p class="py-6 pr-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa
-          dignissimos
-          distinctio dolorem
-          doloremque ducimus illo laboriosam laudantium maxime natus nisi, quaerat quos ratione rerum sapiente sed
-          soluta vel vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cumque
-          dignissimos dolorem ea est
-          fugiat laboriosam nemo, officiis perspiciatis sunt tenetur vel, velit veniam veritatis voluptas! A
-          eligendi fugit natus? Ab aspernatur, aut esse excepturi impedit ipsum iste magni officiis optio porro,
-          quasi voluptatibus.
-          Asperiores commodi consequatur obcaecati, odio quasi vitae. Adipisci architecto autem eaque iste laborum
-          nam nulla unde?</p>
-      </div>
+<div class="hero min-h-screen bg-base-200">
+  <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+    <img src="/img/home.jpg" alt="zdjęcie promocyjne" class="max-w-[20rem] rounded-full shadow-lg" />
+    <div>
+      <h1 class="text-5xl font-bold">Dlaczego my?</h1>
+      <p class="py-6 pr-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa
+        dignissimos
+        distinctio dolorem
+        doloremque ducimus illo laboriosam laudantium maxime natus nisi, quaerat quos ratione rerum sapiente sed
+        soluta vel vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cumque
+        dignissimos dolorem ea est
+        fugiat laboriosam nemo, officiis perspiciatis sunt tenetur vel, velit veniam veritatis voluptas! A
+        eligendi fugit natus? Ab aspernatur, aut esse excepturi impedit ipsum iste magni officiis optio porro,
+        quasi voluptatibus.
+        Asperiores commodi consequatur obcaecati, odio quasi vitae. Adipisci architecto autem eaque iste laborum
+        nam nulla unde?</p>
     </div>
   </div>
+</div>
 <!--    <header>-->
 <!--        <h2 class="md:text-4xl text-4xl lg:text-5xl page-title">Dlaczego my?</h2>-->
 <!--    </header>-->
@@ -61,16 +62,24 @@
 
 <!--<article class="py-8 bg-sky-300 left-0 right-0 text-white text-base lg:text-xl">-->
 
-
 <div class="hero min-h-screen bg-primary text-white">
   <div class="hero-content text-center">
     <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Z życia przedszkola</h1>
-      <div class="flex justify-center">
-        <h4 class="font-semibold text-3xl pb-2">{{this.title}}</h4>
-      </div>
+      <h2 class="text-5xl font-bold py-4">Z życia przedszkola</h2>
+      {{#each shorterFirstNews}}
+        <div class="flex flex-col lg:flex-row">
+          <div class="">
+            <h4 class="font-semibold text-2xl pt-2 text-start whitespace-pre-wrap break-all">{{this.title}}</h4>
+            <h5 class="text-start pb-2">{{this.createdAt}}</h5>
 
-      <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span><a class=" text-xl font-bold hover:text-secondary-focus uppercase">czytaj dalej</a></span></div>
+            <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center">
+          <span class="">{{this.article}}{{#if this.isTooLong}}...<a class=" text-xl font-bold hover:text-secondary-focus uppercase" href="/aktualnosci/{{this.id}}">czytaj dalej</a>{{/if}}</span>
+            </div>
+
+          </div>
+
+        </div>
+      {{/each}}
       <div class="flex justify-center text-base font-bold">
         <a class="hover:text-secondary-focus uppercase" href="/aktualnosci">Przejdź do aktualności</a>
       </div>
@@ -79,14 +88,7 @@
 </div>
 
 
-
-
-
-
-
-
-
-<!--{{#with shorterFirstNews}}-->
+  <!--{{#with shorterFirstNews}}-->
 <!--  <div class="hero min-h-screen bg-base-200">-->
 <!--    <div class="hero-content text-center">-->
 <!--      <div class="max-w-md">-->
@@ -95,20 +97,15 @@
 <!--          <h4 class="font-semibold text-3xl pb-2">{{this.title}}</h4>-->
 <!--        </div>-->
 
-<!--        <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span>{{this.article}}{{#if this.isTooLong}}...<a class=" text-xl font-bold hover:font-extrabold uppercase" href="/aktualnosci/{{this.id}}">czytaj dalej</a>{{/if}}</span></div>-->
+<!--        <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span>{{this.article}}{{#if
+  this.isTooLong}}...<a class=" text-xl font-bold hover:font-extrabold uppercase" href="/aktualnosci/{{this.id}}">czytaj dalej</a>{{/if}}</span></div>-->
 <!--        <div class="flex justify-center text-base font-bold">-->
 <!--          <a class="hover:font-extrabold uppercase" href="/aktualnosci">Zobacz więcej</a>-->
 <!--        </div>-->
 <!--      </div>-->
 <!--    </div>-->
 <!--  </div>-->
-<!--{{/with}}-->
-
-
-
-
-
-
+  <!--{{/with}}-->
 
 
 <!--    <div class="my-0 mx-auto md:max-w-screen-lg px-8">-->
@@ -117,7 +114,8 @@
 <!--            <h4 class="font-semibold text-3xl pb-2">{{this.title}}</h4>-->
 <!--        </div>-->
 
-<!--        <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span>{{this.article}}{{#if this.isTooLong}}...<a class=" text-xl font-bold hover:font-extrabold uppercase" href="/aktualnosci/{{this.id}}">czytaj dalej</a>{{/if}}</span></div>-->
+<!--        <div class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center"><span>{{this.article}}{{#if
+  this.isTooLong}}...<a class=" text-xl font-bold hover:font-extrabold uppercase" href="/aktualnosci/{{this.id}}">czytaj dalej</a>{{/if}}</span></div>-->
 <!--        <div class="flex justify-center text-base font-bold">-->
 <!--            <a class="hover:font-extrabold uppercase" href="/aktualnosci">Zobacz więcej</a>-->
 <!--&lt;!&ndash;        </div>&ndash;&gt;-->
