--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -2,7 +2,7 @@
 
 {{> deleting-dialog-box this}}
 
-{{#with editingRecord}}
+{{#with news}}
         <div id="container-to-blur-when-popup" class="relative z-0">
 
             {{> blur-effect-div}}
@@ -10,6 +10,7 @@
             <header>
                 <h2 class="page-title">Edycja wpisu z dnia {{this.createdAt}}</h2>
             </header>
+
 
             <form action="/aktualnosci/{{this.id}}?_method=PUT" method="POST">
                 <div class="mx-auto text-lg">
@@ -30,6 +31,7 @@
 
 
                 </div>
+
 
                 <div class="text-center">
                     <button type="submit" id="send-article"
