Added the ability to remove an article. Improved styles.

--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -9,7 +9,7 @@
             {{> edit-post this}}
 
 
-    <div class="text-xl whitespace-pre-wrap flex justify-center text-justify">
+    <div class="text-xl whitespace-pre-wrap break-all flex justify-center text-justify">
         <span>{{this.article}}</span>
     </div>
     {{/with}}
