--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -43,7 +43,7 @@
 
 
   <div class="flex-1">
-    <a class="btn btn-ghost normal-case text-sm lg:text-xl text-primary-focus">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
+    <a href="/" class="btn btn-ghost normal-case text-sm lg:text-xl text-primary-focus">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
   </div>
 
 
