--- a/views/photo/list-all.hbs
+++ b/views/photo/list-all.hbs
@@ -1,47 +1,41 @@
 {{> photo-gallery}}
-
 <article class="container-for-article">
 
-    <header>
-        <h2 class="page-title">Album fotograficzny</h2>
-    </header>
+  <header>
+    <h2 class="page-title">Album fotograficzny</h2>
+  </header>
 
-    <div class="one-article">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-            distinctio doloremque eaque error harum illum incidunt.</p>
-    </div>
+  <div class="one-article">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt.</p>
+  </div>
 
-    {{#if userLoggedIn}}
-        <div class="flex justify-center py-4">
-            <a href="/album/dodaj"
-               class="xl-actions-btn hover:font-normal">Dodaj
-                nowy wpis</a>
+  <div class="flex justify-center py-4">
+    <a href="/album/dodaj"
+       class="xl-actions-btn hover:font-normal">Dodaj
+      nowy wpis</a>
+  </div>
+
+  <div class="grid md:grid-cols-2 gap-10 pt-8 pb-12">
+    {{#each photos}}
+      <div class="one-photo rounded overflow-hidden shadow-md hover:shadow-lg">
+        <img class="photo-img h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer"
+             src="{{this.path}}"
+             alt="{{this.title}}">
+
+        <div class="pt-4 px-4" id="photo-description">
+          <span class="title-span font-bold py-4 text-xl">{{this.title}}</span>
+          <span class="createdAt-span text-basic block">{{this.createdAt}}</span>
         </div>
-    {{/if}}
+        <a href="/album/{{this.id}}" class="hover:text-secondary-focus pl-4 pb-4">Otwórz</a>
 
-    <div class="grid md:grid-cols-2 gap-10 pt-8 pb-12">
-        {{#each listOfPhotos}}
-            <div class="one-photo rounded overflow-hidden shadow-md hover:shadow-lg">
-                <img class="photo-img h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer"
-                     src="{{this.path}}"
-                     alt="{{this.title}}">
+        <!--                @TODO UI osobno pokaz slajdów, osobno pojedynczy wpis-->
 
-                <div class="p-4 hover:text-pink-400" id="photo-description">
-                    <a href="/album/{{this.id}}">
-                        <span class="title-span font-bold py-4 text-xl">{{this.title}}</span>
-                        <span class="createdAt-span text-basic block">{{this.createdAt}}</span>
-                    </a>
-                </div>
+      </div>
+    {{/each}}
+  </div>
 
-<!--                @TODO UI osobno pokaz slajdów, osobno pojedynczy wpis-->
-
-            </div>
-        {{/each}}
-    </div>
-
-    {{> pagination this}}
-
-    </div>
+  {{> pagination this}}
 
 </article>
 
