Added photo editing form. Fixed delete dialog error.

--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -1,8 +1,8 @@
 <div class="container-for-article relative z-0">
-{{log this}}
+
 {{> deleting-dialog-box this}}
 
-{{#with news}}
+{{#with item}}
         <div id="container-to-blur-when-popup" class="relative z-0">
 
             {{> blur-effect-div}}
