--- a/views/photo/edit.hbs
+++ b/views/photo/edit.hbs
@@ -2,7 +2,7 @@
 
     {{> deleting-dialog-box this}}
 
-    {{#with editingRecord}}
+    {{#with item}}
 
     <div id="container-to-blur-when-popup" class="relative z-0">
 
