Improved logo text.

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -12,15 +12,15 @@
 </head>
 <body class="relative bg-base-100">
 
-<header class="navbar bg-base-100 fixed top-0 z-50 shadow-md border-2 h-[67px] flex">
-  <div class="dropdown lg:hidden">
+<header class="navbar bg-base-100 fixed top-0 z-50 shadow-md border-2 h-[67px] flex justify-between">
+  <div class="dropdown xl:hidden">
     <label tabindex="0" class="btn btn-ghost btn-circle">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
       </svg>
     </label>
     <ul tabindex="0"
-        class="block menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 absolute h-fit overflow-y-scroll flex-none text-secondary-focus font-semibold">
+        class="block menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 absolute h-fit flex-none text-secondary-focus font-semibold">
       <li><a href="/">Strona główna</a></li>
       <li><a href="/aktualnosci">Aktualności</a></li>
       <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>
@@ -41,13 +41,13 @@
     </ul>
   </div>
 
-  <div class="flex-1">
-    <a href="/" class="btn btn-ghost normal-case text-sm lg:text-xl text-primary-focus">Publiczne Przedszkole nr 23 w
+  <div class="xl:flex-1 mx-auto w-fit xl:w-full">
+    <a href="/" class="sm:btn sm:btn-ghost sm:text-primary-focus  font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-all">Publiczne Przedszkole nr 23 w
       Jastrzębiu-Zdroju</a>
   </div>
 
   <div class="flex-none gap-2 text-secondary-focus font-semibold">
-    <ul class="menu hidden lg:flex menu-horizontal px-1">
+    <ul class="menu hidden xl:flex menu-horizontal px-1">
       <li tabindex="0">
         <a>
           Menu
