--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2019,6 +2019,11 @@ html {
   height: 100vh;
 }
 
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -2146,6 +2151,10 @@ html {
   overflow-y: scroll;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .whitespace-pre-wrap {
   white-space: pre-wrap;
 }
@@ -2195,6 +2204,11 @@ html {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-base-100 {
@@ -2859,6 +2873,232 @@ html {
   color: hsl(var(--sf, var(--s)) / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:btn {
+    display: inline-flex;
+    flex-shrink: 0;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    border-color: transparent;
+    border-color: hsl(var(--n) / var(--tw-border-opacity));
+    text-align: center;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: var(--rounded-btn, 0.5rem);
+    height: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    line-height: 1em;
+    min-height: 3rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-transform: var(--btn-text-case, uppercase);
+    text-decoration-line: none;
+    border-width: var(--border-btn, 1px);
+    animation: button-pop var(--animation-btn, 0.25s) ease-out;
+    --tw-border-opacity: 1;
+    --tw-bg-opacity: 1;
+    background-color: hsl(var(--n) / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: hsl(var(--nc) / var(--tw-text-opacity));
+  }
+
+  .sm\:btn[disabled] {
+    pointer-events: none;
+  }
+
+  .sm\:btn.loading,.sm\:btn.loading:hover {
+    pointer-events: none;
+  }
+
+  .sm\:btn.loading:before {
+    margin-right: 0.5rem;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 9999px;
+    border-width: 2px;
+    animation: spin 2s linear infinite;
+    content: "";
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: currentColor;
+    border-right-color: currentColor;
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    .sm\:btn.loading:before {
+      animation: spin 10s linear infinite;
+    }
+  }
+
+  .btn-group > input.sm\:btn[type="radio"] {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+  }
+
+  .btn-group > input.sm\:btn[type="radio"]:before {
+    content: attr(data-title);
+  }
+
+  .sm\:btn:active:hover,.sm\:btn:active:focus {
+    animation: none;
+  }
+
+  .sm\:btn:not(.no-animation):active:hover,.sm\:btn:not(.no-animation):active:focus {
+    transform: scale(var(--btn-focus-scale, 0.95));
+  }
+
+  .sm\:btn:hover {
+    --tw-border-opacity: 1;
+    border-color: hsl(var(--nf, var(--n)) / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: hsl(var(--nf, var(--n)) / var(--tw-bg-opacity));
+  }
+
+  .sm\:btn:focus-visible {
+    outline: 2px solid hsl(var(--nf));
+    outline-offset: 2px;
+  }
+
+  .sm\:btn.glass:hover,.sm\:btn.glass.btn-active {
+    --glass-opacity: 25%;
+    --glass-border-opacity: 15%;
+  }
+
+  .sm\:btn.glass:focus-visible {
+    outline: 2px solid currentColor;
+  }
+
+  .sm\:btn-ghost {
+    border-width: 1px;
+    border-color: transparent;
+    background-color: transparent;
+    color: currentColor;
+  }
+
+  .sm\:btn-ghost:hover,.sm\:btn-ghost.btn-active {
+    --tw-border-opacity: 0;
+    background-color: hsl(var(--bc) / var(--tw-bg-opacity));
+    --tw-bg-opacity: 0.2;
+  }
+
+  .sm\:btn-ghost:focus-visible {
+    outline: 2px solid currentColor;
+  }
+
+  .sm\:btn[disabled],.sm\:btn[disabled]:hover {
+    --tw-border-opacity: 0;
+    background-color: hsl(var(--n) / var(--tw-bg-opacity));
+    --tw-bg-opacity: 0.2;
+    color: hsl(var(--bc) / var(--tw-text-opacity));
+    --tw-text-opacity: 0.2;
+  }
+
+  .sm\:btn.loading.btn-square:before,.sm\:btn.loading.btn-circle:before {
+    margin-right: 0px;
+  }
+
+  .sm\:btn.loading.btn-xl:before,.sm\:btn.loading.btn-lg:before {
+    height: 1.25rem;
+    width: 1.25rem;
+  }
+
+  .sm\:btn.loading.btn-sm:before,.sm\:btn.loading.btn-xs:before {
+    height: 0.75rem;
+    width: 0.75rem;
+  }
+
+  .btn-group > input.sm\:btn[type="radio"]:checked {
+    --tw-border-opacity: 1;
+    border-color: hsl(var(--p) / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: hsl(var(--p) / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: hsl(var(--pc) / var(--tw-text-opacity));
+  }
+
+  .btn-group > input.sm\:btn[type="radio"]:checked:focus-visible {
+    outline: 2px solid hsl(var(--p));
+  }
+
+  .drawer-toggle:focus-visible ~ .drawer-content .sm\:btn-ghost.drawer-button {
+    outline: 2px solid currentColor;
+  }
+
+  .btn-group .sm\:btn:not(:first-child):not(:last-child) {
+    border-start-start-radius: 0;
+    border-start-end-radius: 0;
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
+  }
+
+  .btn-group .sm\:btn:first-child:not(:last-child) {
+    margin-top: -0px;
+    margin-left: -1px;
+    border-start-start-radius: var(--rounded-btn, 0.5rem);
+    border-start-end-radius: 0;
+    border-end-start-radius: var(--rounded-btn, 0.5rem);
+    border-end-end-radius: 0;
+  }
+
+  .btn-group .sm\:btn:last-child:not(:first-child) {
+    border-start-start-radius: 0;
+    border-start-end-radius: var(--rounded-btn, 0.5rem);
+    border-end-start-radius: 0;
+    border-end-end-radius: var(--rounded-btn, 0.5rem);
+  }
+
+  .btn-group-horizontal .sm\:btn:not(:first-child):not(:last-child) {
+    border-start-start-radius: 0;
+    border-start-end-radius: 0;
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
+  }
+
+  .btn-group-horizontal .sm\:btn:first-child:not(:last-child) {
+    margin-top: -0px;
+    margin-left: -1px;
+    border-start-start-radius: var(--rounded-btn, 0.5rem);
+    border-start-end-radius: 0;
+    border-end-start-radius: var(--rounded-btn, 0.5rem);
+    border-end-end-radius: 0;
+  }
+
+  .btn-group-horizontal .sm\:btn:last-child:not(:first-child) {
+    border-start-start-radius: 0;
+    border-start-end-radius: var(--rounded-btn, 0.5rem);
+    border-end-start-radius: 0;
+    border-end-end-radius: var(--rounded-btn, 0.5rem);
+  }
+
+  .btn-group-vertical .sm\:btn:first-child:not(:last-child) {
+    margin-top: -1px;
+    margin-left: -0px;
+    border-start-start-radius: var(--rounded-btn, 0.5rem);
+    border-start-end-radius: var(--rounded-btn, 0.5rem);
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
+  }
+
+  .btn-group-vertical .sm\:btn:last-child:not(:first-child) {
+    border-start-start-radius: 0;
+    border-start-end-radius: 0;
+    border-end-start-radius: var(--rounded-btn, 0.5rem);
+    border-end-end-radius: var(--rounded-btn, 0.5rem);
+  }
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -2931,6 +3171,16 @@ html {
   .sm\:p-2 {
     padding: 0.5rem;
   }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-primary-focus {
+    --tw-text-opacity: 1;
+    color: hsl(var(--pf, var(--p)) / var(--tw-text-opacity));
+  }
 }
 
 @media (min-width: 768px) {
@@ -2984,6 +3234,10 @@ html {
     display: none;
   }
 
+  .lg\:flex-1 {
+    flex: 1 1 0%;
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -3008,6 +3262,22 @@ html {
 }
 
 @media (min-width: 1280px) {
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:flex-1 {
+    flex: 1 1 0%;
+  }
+
   .xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
